Minor comment edit; readme
Changed description of fisher.py to read "non-Gaussian" instead of
"lognormal"; began a README file

--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 Created on Fri Nov 07 10:39:02 2014
 
 fisher.py
-Calculates the Fisher information matrix for Gaussian and non-Gaussian cases.
+Calculates the Fisher information matrix for Gaussian and lognormal cases.
 
 @author: Andrew
 """
